test/Fail/ConflictingRelevance3.err
ConflictingRelevance3.agda:4.9: error: [ParseError]
Conflicting relevance information
